syntax="proto3";

option go_package = "amusingx.fit/amusingx/protos/pangu/service/pangu/proto";

package panguservice;

message ProductDeleteRequest {
   int64 id = 1;
}

message ProductDeleteResponse {
  bool Result = 1;
}

message ProductsDeleteRequest {
  string filter = 1;
}

message ProductsDeleteResponse {
  bool result = 1;
  repeated int64 ids = 2;
}