syntax="proto3";
option go_package = "amusingx.fit/amusingx/protos/pangu/service/pangu/proto";

package panguservice;

message ProductRequest {
  int64  id = 1;
}
