syntax = "proto3";

option go_package = "amusingx.fit/amusingx/protos/pangu/service/pangu/proto";

package panguservice;

message ProductUpdateRequest {
  int64  id = 1;
  string name = 2;
  string desc = 3;
  int64 category_id = 4;
}